chnaged structure and added an intial dynamoDB depedency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8080
 management.security.enabled=false
 management.server.port=8081
 management.endpoints.web.base-path=/monitor
-management.endpoints.web.exposure.include=health,info,metrics
+management.endpoints.web.exposure.include=health,info,metrics, beans, httptrace, loggers, mappings, sessions
 management.endpoint.health.show-details=always
 spring.profiles.active=prod
