--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ management.endpoints.web.exposure.include=health,info,metrics, beans, httptrace,
 management.endpoint.health.show-details=always
 spring.profiles.active=prod
 aws.user.id=ag_generic_service_user
-aws.user.accesskeyid=AKIAYDDESLTIGSPFPS4H
-aws.user.secretkey=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
+aws.user.accesskeyid=
+aws.user.secretkey=
 aws.endpoint.local=http://localhost:8000
 aws.endpoint=https://dynamodb.us-east-1.amazonaws.com
 aws.region=us-east-1
